# data-compression

Code/: README.md  out_file.csv  parsing  parsing.cpp  three_to_one.cpp  txt_to_raw.cpp  txt_to_raw.py
Code/Gzip/: Delta_preprocessing.cpp  Delta_preprocessing.h  Makefile  delta_gzip  gzip_compress.cpp  gzip_compress.h  main.cpp
Code/Heatshrink/: Makefile  README.md  compressed_output.hsz  heatshrink_implementation.cpp
Code/LZ4/: Makefile  compress_decompress.cpp  compress_decompress.h  main.cpp
Code/split_output/: VM4P-00018-1734523888880_ch2.raw  VM4P-00018-1734523900321_ch2.raw  VM4P-00018-1734524409286_ch3.raw  VM4P-00018-1735459535129_ch2.raw  VM4P-00077-1739063183645_ch2.raw
Code/zstd/: Delta_preprocessing.cpp  Delta_preprocessing.h  Makefile  README  compress_delta_with_zstd.cpp  compressed_output_hex.txt  decompress_delta_with_zstd.cpp  decompressed_output_base64.txt  main.cpp  reconstructed_output.zst  zstd_compress.h
Data/3_axis_raw/: data0.raw  data1.raw  data2.raw  data3.raw
Data/3_axis_raw_split/: data0_ch1.raw  data0_ch2.raw  data0_ch3.raw  data1_ch1.raw  data1_ch2.raw  data1_ch3.raw  data2_ch1.raw  data2_ch2.raw  data2_ch3.raw  data3_ch1.raw  data3_ch2.raw  data3_ch3.raw
Data/3_channel_data/: VM4P-00018-1734523888880.raw  VM4P-00018-1734523900321.raw  VM4P-00018-1734524409286.raw  VM4P-00018-1735459535129.raw  VM4P-00077-1739063183645.raw  out_file1.raw  out_file3.raw
Data/drive-download-20250603T073421Z-1-001/: VM4P-00018-1734523888880.raw  VM4P-00018-1734523900321.raw  VM4P-00018-1734524409286.raw  VM4P-00018-1735459535129.raw  VM4P-00077-1739063183645.raw
Data/split_output/: VM4P-00018-1734523900321_ch1.raw  VM4P-00018-1734523900321_ch3.raw  VM4P-00018-1734524409286_ch1.raw  VM4P-00018-1734524409286_ch2.raw  (+4 more)
esp-explore/: CMakeLists.txt
heatshrink-on-esp/: CMakeLists.txt  partitions.csv
steval-board/: CMakeLists.txt
zstd-on-esp/: CMakeLists.txt  README.md
zstd-on-esp/components/zstd/: CMakeLists.txt
zstd-on-esp/components/zstd/src/: Delta_preprocessing.cpp  base64.cpp  compress_delta_with_zstd.cpp  zstd_compress.h
zstd-on-esp/components/zstd/src/dictBuilder/: cover.c  fastcover.c  zdict.c
(+92 files in other folders)
